--- a/BookBee/src/main/resources/templates/notas.html
+++ b/BookBee/src/main/resources/templates/notas.html
@@ -68,16 +68,15 @@
 
     <main class="main">
         <div class="usuario">
-            <img class="image" src="/BookBee/src/main/resources/static/img/user.png" alt="Foto do Usuário">
-            </p id="username">Nome do Usuário</p> 
+            <a href="#"><img src="/BookBee/src/main/resources/static/img/user.png" alt="Foto do Usuário"></a>
+            <p id="username">Nome do Usuário</p>
         </div>
 
         <div class="barradepes">
-            <input type="text" class="search-txt" placeholder="Encontre o livro que você gosta...">
-            <a href="#">
+            <input type="text" id="search-txt" placeholder="Encontre o livro que você gosta...">
+            <button id="btnBuscar" type="button">
                 <img src="/BookBee/src/main/resources/static/img/lupa.png" alt="Lupa">
-                 
-            </a>
+            </button>
         </div>
 
         <div class="container-citacao" id="citacao">
@@ -85,26 +84,48 @@
                 <p>Anotações</p>
             </div>
         </div>
-
-        <div class="caixa-notas-adc">
-            <img src="https://books.google.com/books/content?id=ud06EAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
-            <div class="conteudo-adc">
-                <h5>1 - Lorem</h5>
-                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa eos ut magnam molestiae nemo maxime impedit natus, voluptate architecto. Sit quos adipisci non quas atque quod, hic ex placeat?"</p>
+        <div class="container-caixas">
+            <div class="caixa-notas-adc">
+                <img src="https://books.google.com/books/content?id=ud06EAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                <div class="conteudo-adc">
+                    <h5>1 - Lorem</h5>
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa eos ut magnam molestiae nemo maxime impedit natus, voluptate architecto. Sit quos adipisci non quas atque quod, hic ex placeat?"</p>
+                </div>
             </div>
-        </div>
-        <div class="caixa-notas-adc">
-            <img src="https://books.google.com/books/content?id=8hJfEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
-            <div class="conteudo-adc">
-                <h5>1 - Lorem</h5>
-                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa eos ut magnam molestiae nemo maxime impedit natus, voluptate architecto. Sit quos adipisci non quas atque quod, hic ex placeat?"</p>
+            <div class="caixa-notas-adc">
+                <img src="https://books.google.com/books/content?id=8hJfEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                <div class="conteudo-adc">
+                    <h5>1 - Lorem</h5>
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa eos ut magnam molestiae nemo maxime impedit natus, voluptate architecto. Sit quos adipisci non quas atque quod, hic ex placeat?"</p>
+                </div>
             </div>
-        </div>
-        <div class="caixa-notas-adc">
-            <img src="https://books.google.com/books/content?id=i-xtEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
-            <div class="conteudo-adc">
-                <h5>1 - Lorem</h5>
-                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa eos ut magnam molestiae nemo maxime impedit natus, voluptate architecto. Sit quos adipisci non quas atque quod, hic ex placeat?"</p>
+            <div class="caixa-notas-adc">
+                <img src="https://books.google.com/books/content?id=i-xtEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                <div class="conteudo-adc">
+                    <h5>1 - Lorem</h5>
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa eos ut magnam molestiae nemo maxime impedit natus, voluptate architecto. Sit quos adipisci non quas atque quod, hic ex placeat?"</p>
+                </div>
+            </div>
+            <div class="caixa-notas-adc">
+                <img src="https://books.google.com/books/content?id=iUGhEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                <div class="conteudo-adc">
+                    <h5>1 - Lorem</h5>
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa eos ut magnam molestiae nemo maxime impedit natus, voluptate architecto. Sit quos adipisci non quas atque quod, hic ex placeat?"</p>
+                </div>
+            </div>
+            <div class="caixa-notas-adc">
+                <img src="https://books.google.com/books/content?id=131KDwAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api " alt="">
+                <div class="conteudo-adc">
+                    <h5>1 - Lorem</h5>
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa eos ut magnam molestiae nemo maxime impedit natus, voluptate architecto. Sit quos adipisci non quas atque quod, hic ex placeat?"</p>
+                </div>
+            </div>
+            <div class="caixa-notas-adc">
+                <img src="https://books.google.com/books/content?id=L3yzEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                <div class="conteudo-adc">
+                    <h5>1 - Lorem</h5>
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsa eos ut magnam molestiae nemo maxime impedit natus, voluptate architecto. Sit quos adipisci non quas atque quod, hic ex placeat?"</p>
+                </div>
             </div>
         </div>
     
