--- a/BookBee/src/main/resources/templates/metas.html
+++ b/BookBee/src/main/resources/templates/metas.html
@@ -73,11 +73,10 @@
         </div>
 
         <div class="barradepes">
-            <input type="text" class="search-txt" placeholder="Encontre o livro que você gosta...">
-            <a href="#">
+            <input type="text" id="search-txt" placeholder="Encontre o livro que você gosta...">
+            <button id="btnBuscar" type="button">
                 <img src="/BookBee/src/main/resources/static/img/lupa.png" alt="Lupa">
-                 
-            </a>
+            </button>
         </div>
 
         <div class="container-metas" id="metaLeitura">
@@ -85,16 +84,40 @@
                 <p>Metas de Leitura</p>
             </div>
         </div>
-
-        <div class="adc-livro">
-            <a href="#">
-                <button>
-                    <img src="/BookBee/src/main/resources/static/img/adicionar.png" alt="Adicionar">
-                </button>
-            </a>
-            
-        </div>
     
+        <section class="favoritos">
+            <ul id="livros" class="resultfavoritos">
+                <li class="adc-livro">
+                    <a href="#">
+                        <button>
+                            <img src="/BookBee/src/main/resources/static/img/adicionar.png" alt="Adicionar">
+                        </button>
+                    </a>   
+                </li>
+                <li class="livrosFavoritosTodos" onclick="exibirDetalheDoLivro('iUGhEAAAQBAJ')">
+                    <img src="https://books.google.com/books/content?id=iUGhEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                </li>
+                <li class="livrosFavoritosTodos" onclick="exibirDetalheDoLivro('131KDwAAQBAJ')">
+                    <img src="https://books.google.com/books/content?id=131KDwAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api "alt="">
+                    
+                </li>
+                <li class="livrosFavoritosTodos" onclick="exibirDetalheDoLivro('L3yzEAAAQBAJ')">
+                   <img src="https://books.google.com/books/content?id=L3yzEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                </li>
+                <li class="livrosFavoritosTodos" onclick="exibirDetalheDoLivro('XnWzEAAAQBAJ')">
+                   <img src="https://books.google.com/books/content?id=XnWzEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                </li>
+                <li class="livrosFavoritosTodos" onclick="exibirDetalheDoLivro('XnWzEAAAQBAJ')">
+                    <img src="https://books.google.com/books/content?id=8hJfEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                 </li>
+                 <li class="livrosFavoritosTodos" onclick="exibirDetalheDoLivro('XnWzEAAAQBAJ')">
+                    <img src="https://books.google.com/books/content?id=i-xtEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                 </li>
+                  <li class="livrosFavoritosTodos" onclick="exibirDetalheDoLivro('XnWzEAAAQBAJ')">
+                    <img src="https://books.google.com/books/content?id=i-xtEAAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api" alt="">
+                 </li>
+            </ul>
+        </section>
     </main>
 
 </body>
