--- a/BookBee/src/main/resources/templates/login.html
+++ b/BookBee/src/main/resources/templates/login.html
@@ -43,6 +43,9 @@
                                 Crie sua conta!</a>
                             </li>
                     </ul>
+                    <p th:if="${erro != null}"
+                    th:text="${erro}"
+                    class="errp-login"></p>
                 </div>
                 <div class="botaologin1">
                     <button type="submit"><a>Login</a></button>
