--- a/BookBee/src/main/resources/templates/detalhesdolivro.html
+++ b/BookBee/src/main/resources/templates/detalhesdolivro.html
@@ -146,15 +146,51 @@
                         <input type="hidden"  name="idLivros" th:value="${livros.idLivro}">
                         <input type="hidden"  name="leitorId" th:value="${livro.leitor.id}">
                         <input type="text" id="newListName" name="nomeLista" placeholder="Nome da Lista">
-                        <button type="submit" id="createListButton">Criar Lista</button>
+                        <button class="bnt-criaLista" type="submit" id="createListButton">Criar Lista</button>
                     </form>
                     <h3>Listas Existentes</h3>
                     
                     <div class="lista-existente">
                         <div class="botoes-lista">
                             <button class="botao-lista">
-                                <a href="#"><img src="/BookBee/src/main/resources/static/img/botão-lista-verde.png" alt=""></a>
+                                <a href="#"><img src="/BookBee/src/main/resources/static/img/botão-lista-branco.png" alt=""></a>
                                 <p>Clarisse Lispector</p>
+                            </button>
+                          </div>
+                          <div class="botoes-lista">
+                            <button class="botao-lista">
+                                <a href="#"><img src="/BookBee/src/main/resources/static/img/botão-lista-branco.png" alt=""></a>
+                                <p>Harry Potter</p>
+                            </button>
+                          </div>
+                          <div class="botoes-lista">
+                            <button class="botao-lista">
+                                <a href="#"><img src="/BookBee/src/main/resources/static/img/botão-lista-branco.png" alt=""></a>
+                                <p>Hannibal Lecter</p>
+                            </button>
+                          </div>
+                          <div class="botoes-lista">
+                            <button class="botao-lista">
+                                <a href="#"><img src="/BookBee/src/main/resources/static/img/botão-lista-branco.png" alt=""></a>
+                                <p>Literatura Brasileira</p>
+                            </button>
+                          </div>
+                          <div class="botoes-lista">
+                            <button class="botao-lista">
+                                <a href="#"><img src="/BookBee/src/main/resources/static/img/botão-lista-branco.png" alt=""></a>
+                                <p>O Povo do Ar</p>
+                            </button>
+                          </div>
+                          <div class="botoes-lista">
+                            <button class="botao-lista">
+                                <a href="#"><img src="/BookBee/src/main/resources/static/img/botão-lista-branco.png" alt=""></a>
+                                <p>Jogos Vorazes</p>
+                            </button>
+                          </div>
+                          <div class="botoes-lista">
+                            <button class="botao-lista">
+                                <a href="#"><img src="/BookBee/src/main/resources/static/img/botão-lista-branco.png" alt=""></a>
+                                <p>Percy Jackson</p>
                             </button>
                           </div>
                     </div>
